Bug #4650 Scan does not report timeout of owning transaction
Submitted: 20 Jul 2004 16:30 Modified: 30 Jul 2004 19:10
Reporter: Martin Skold Email Updates:
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:4.1 OS:LH 9.0
Assigned to: Martin Skold Target Version:

[20 Jul 2004 16:30] Martin Skold
Description:
In bug#4643 it was noticed that scans returns a result in
a timed-out transaction instead of reporting the timeout.

How to repeat:
create table abc (x integer primary key not null, y varchar(32));
start transaction; insert into abc values (3 , 'three');
<wait>
select * from abc;
Empty set (0.00 sec)

should be
select * from abc;
ERROR 1205 (HY000): Lock wait timeout exceeded; try restarting transaction

Suggested fix:
A check is needed in TC that the scan owning transaction
has not timed-out.
[20 Jul 2004 16:31] Martin Skold
Patch commited to mysql-4.1-ndb, waiting for review.