Fix for bug#4650 Scan does not report timeout of owning transaction